[tool.poetry]
name = "examon-repo-1"
version = "1.0.1"
description = ""
authors = ["Jarrod Folino <jdfolino@icloud.com>"]
readme = "README.md"
packages = [{include = "examon_repo_1"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
