[tool.poetry]
name = "examon_repo_1"
version = "1.0.2"
description = ""
authors = ["Jarrod Folino <jdfolino@icloud.com>"]
readme = "README.md"
packages = [{include = "examon_repo_1"}]

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"
secondary = true

[tool.poetry.dependencies]
python = "^3.9"
examon-core = "0.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
